# will-it-blend

./: README.md  old_wordy_readme.md  setup.py
cloud_handler/: CMakeLists.txt  cloud.cpp  cloud.h
data_generation/: .gitignore  PASCAL_make_set.py  StackShift.lua  cloud_vis.py  cuda_feature_extraction.py  cython_feature_extraction.pyx  data_vectorize.pyx  generate_driver.py  generate_image.py  get_kinect_frames.py  make_h5.py  path.txt  post_process.py  prediction_visualize.py  r_make_set_commands.txt  th_vis.th
data_generation/blend_data/: base_scene.blend  base_scene.blend1  base_scene_full.blend  base_scene_old.blend  neutral_person.mhx
data_generation/blender_scripts/: scene_manager.py
data_generation/configs/: default.txt  default.txt~  main_million.txt  main_million.txt~  make_10.txt  type_0_check.txt  type_1_check.txt  type_1_check.txt~  type_2_check.txt
prototype_trainers/: StackShift.lua  default.txt  fcn_32.th  fcn_torch.th  kinect_vis.th  make_depth_set.py  make_depth_set.py~  neural_net.py  random_forest.py  random_forest.py~  th_vis.th
train_cnn/: CAE.py  cnn_train.lua  conv_shape_checker.py  full_net_check.txt  layer_example.txt  predict_image.py  save_recon.py  simple_train.py  train_cata.py  train_conv_auto_encoder.py  train_mask.py  train_mask_driver.py  train_net.py  train_pickle.py  train_plane.py
train_cnn/configurations/: full_net_default.txt
train_cnn/struct-0.2/configs/: default.txt  default.txt~  main_million.txt  main_million.txt~
train_cnn/structure_models/: CAE_2conv_pool_relu.py  full_net.py
video_run/include/: cloud.h
video_run/src/: cloud.cpp  make_frames.py
visualizer/: CMakeLists.txt  cloud.cpp  cloud.i
